<resources>
    <string name="app_name">Buddy</string>
    <string name="login">LOGIN</string>
    <string name="register">REGISTER</string>

    <string name="btn_login">LOGIN</string>
    <string name="btn_updateımg">Update Image</string>
    <string name="btn_forgot_password">Forgot Password</string>
    <string name="btn_link_to_register">REGISTER</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="minimum_password">Password too short, enter minimum 6 characters!</string>
    <string name="auth_failed">Authentication failed, check your email and password or sign up</string>
    <string name="textmail">Friend email:</string>
    <string name="action_sign_in_short">Register</string>
    <string name="email">Email</string>
    <string name="deletemail">Delete</string>

    <string name="entermail">Enter friend Mail</string>
    <string name="title_map">Map</string>
    <string name="title_calendar">Calendar</string>
    <string name="title_chat">Groups</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_profile">Profile</string>


    <string name="change_email">Change Email</string>
    <string name="change_password">Change Password</string>
    <string name="send_password_reset_email">Send Password reset email</string>
    <string name="remove_user">Remove user</string>
    <string name="new_pass">New Password</string>
    <string name="title_activity_profile">Firebase</string>
    <string name="title_activity_login">Sign in</string>
    <string name="createbutton">Create Group</string>
    <string name="hint_name">Fullname</string>

    <string name="btn_link_to_login">Already registered. Login Me!</string>
    <string name="title_activity_reset_password">ResetPasswordActivity</string>

    <string name="btn_reset_password">Reset Password</string>
    <string name="btn_back"><![CDATA[<< Back]]></string>
    <string name="hint_new_email">New Email</string>
    <string name="btn_change">Change</string>
    <string name="btn_send">Send</string>
    <string name="btn_remove">Remove</string>
    <string name="btn_sign_out">Sign Out</string>
    <string name="lbl_forgot_password">Forgot password?</string>
    <string name="forgot_password_msg">We just need your registered Email Id to sent you password reset instructions.</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_activity_menu2">Menu2Activity</string>
    <string name="todo">TODO</string>
    <string name="enter_group_name">Enter group name</string>
    <string name="see_on_map">Location</string>
    <string name="my_location">My Location</string>
    <string name="groupname">Groupname</string>
    <string name="button">Button</string>
    <string name="sfds">TODO</string>
    <string name="Buddy">BUDDY</string>
    <string name="surname">SURNAME</string>
    <string name="password">PASSWORD</string>
    <string name="b_rthdate">BİRTHDATE</string>
    <string name="ema_l">EMAİL</string>
    <string name="phone_number">PHONE NUMBER</string>
    <string name="change_photo">Change Photo</string>
    <string name="name">NAME</string>
    <string name="address">ADDRESS</string>
    <string name="ed_t">EDİT</string>
    <string name="save">SAVE</string>
    <string name="addfriend">Add Friend</string>
    <string name="createevent">Create Event</string>
    <string name="editt">Edit</string>


    <string name="title_activity_maps">Map</string>
    <string name="google_maps_API_key">AIzaSyB-W4DOkRhxaUOpPxhtasGhbArxPIJn-PE</string>


</resources>
