<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context="com.example.asus.buddy.EditProfileFragment">

    <!-- TODO: Update blank fragment layout -->


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <Button
            android:id="@+id/change"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@+id/passwords"
            android:layout_alignParentStart="true"
            android:layout_marginBottom="16dp"
            android:text="@string/change_photo" />

        <ImageView
            android:id="@+id/imageView4"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:contentDescription="@string/todo"
            android:src="@mipmap/ic_launcher_logo" />

        <EditText
            android:id="@+id/name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_marginTop="18dp"
            android:layout_toEndOf="@+id/change"
            android:ems="10"
            android:inputType="textPersonName"
            android:text="@string/name" />

        <EditText
            android:id="@+id/surname"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignStart="@+id/name"
            android:layout_below="@+id/name"
            android:layout_marginTop="11dp"
            android:ems="10"
            android:inputType="textPersonName"
            android:text="@string/surname" />

        <EditText
            android:id="@+id/mail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignStart="@+id/surname"
            android:layout_below="@+id/surname"
            android:editable="false"
            android:ems="10"
            android:enabled="false"
            android:inputType="textPersonName"
            android:text="@string/ema_l" />

        <EditText
            android:id="@+id/passwords"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignStart="@+id/mail"
            android:layout_below="@+id/mail"
            android:ems="10"
            android:inputType="textPersonName|textPassword"
            android:text="@string/password" />

        <EditText
            android:id="@+id/phone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignStart="@+id/passwords"
            android:layout_below="@+id/passwords"
            android:ems="10"
            android:inputType="textPersonName|phone"
            android:text="@string/phone_number" />

        <EditText
            android:id="@+id/addresss"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignStart="@+id/phone"
            android:layout_below="@+id/phone"
            android:ems="10"
            android:inputType="textPersonName"
            android:text="@string/address" />

        <Button
            android:id="@+id/editbut"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignEnd="@+id/bdate"
            android:layout_below="@+id/bdate"
            android:layout_marginTop="40dp"
            android:text="@string/save" />

        <EditText
            android:id="@+id/bdate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignStart="@+id/addresss"
            android:layout_below="@+id/addresss"
            android:layout_marginTop="15dp"
            android:ems="10"
            android:inputType="textPersonName"
            android:text="@string/b_rthdate" />

    </RelativeLayout>
</FrameLayout>
