<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/common_google_signin_btn_text_dark_default"
    tools:context="com.example.asus.buddy.CreateGroupFragment">

    <!-- TODO: Update blank fragment layout -->
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <android.support.design.widget.FloatingActionButton
            android:id="@+id/nextbutton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignEnd="@+id/groupnamecreate"
            android:layout_below="@+id/buttonImage"
            android:clickable="true"
            android:src="@android:drawable/ic_menu_send"
            app:backgroundTint="@color/colorPrimary" />

        <EditText
            android:id="@+id/groupnamecreate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignTop="@+id/imageView"
            android:layout_marginTop="16dp"
            android:layout_toEndOf="@+id/buttonImage"
            android:ems="10"
            android:inputType="text"
            android:text="@string/enter_group_name" />

        <Button
            android:id="@+id/buttonImage"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_alignStart="@+id/imageView"
            android:layout_below="@+id/imageView"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:text="@string/btn_updateımg"
            android:textAppearance="@style/TextAppearance.AppCompat.Body2" />

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="15dp"
            android:layout_marginTop="20dp"
            android:contentDescription="@string/todo"
            app:srcCompat="@mipmap/ic_launcher_logo" />
    </RelativeLayout>

</FrameLayout>
