<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/fragment2"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/common_google_signin_btn_text_dark_default"
    tools:context="com.example.asus.buddy.CreateSecondGroupFragment">

    <!-- TODO: Update blank fragment layout -->
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ListView
            android:id="@+id/listmails"
            android:layout_width="match_parent"
            android:layout_height="350dp"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/friendemail"
            android:visibility="visible">

        </ListView>

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/friendemail"
            android:layout_alignBottom="@+id/friendemail"
            android:layout_alignParentStart="true"
            android:layout_marginStart="14dp"
            android:text="@string/textmail" />

        <android.support.design.widget.FloatingActionButton
            android:id="@+id/addbutton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignTop="@+id/friendemail"
            android:layout_marginEnd="14dp"
            android:clickable="true"
            android:focusable="true"
            android:tint="@color/common_google_signin_btn_text_dark_default"
            app:backgroundTint="@color/colorPrimary"
            app:srcCompat="@android:drawable/ic_input_add" />

        <EditText
            android:id="@+id/friendemail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_marginStart="11dp"
            android:layout_marginTop="16dp"
            android:layout_toEndOf="@+id/textView"
            android:ems="9"
            android:inputType="text"
            android:labelFor="@+id/addbutton"
            android:text="@string/entermail" />


        <Button
            android:id="@+id/createbutton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignEnd="@+id/addbutton"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="22dp"
            android:layout_marginEnd="14dp"
            android:text="@string/createbutton" />
    </RelativeLayout>

</FrameLayout>
